fix sphere, fix cube normals, color is not passing to fragment shader

--- a/asgn4/site/styles.css
+++ b/asgn4/site/styles.css
@@ -91,7 +91,7 @@ p, span, li {
     border: 0;
 }
 
-/* Source: https://codepen.io/hudadamar21/pen/Rwoygwr */
+/* Source: https://codepen.io/hudadamar21/pen/Rwoygwr *//*
 .btn-minecraft {
     position: relative;
     top: -7.5px;
